# python-xGraph

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: workflow.yml
python_xgraph/: __init__.py  graph.py
tests/: test_graph.py
