[metadata]
name = python-xgraph
version = 1.0.2
author = Abhishek Sinha
author_email = sinha.abhishek.ai@gmail.com
description = A simple graph library with DFS, BFS, and cycle detection.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sinha-abhishek-ai/python-xGraph
license = MIT
keywords = graph, DFS, BFS, cycle detection, topological sort
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.extras_require]
dev =
    pytest
    black
    flake8

[options.package_data]
* = *.txt, *.rst, *.md

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
addopts = --verbose
